--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
 
         ndk {
             //abiFilters 'armeabi-v7a', 'arm64-v8a'
-            abiFilters 'armeabi-v7a'
+            // abiFilters 'armeabi-v7a'
+            abiFilters 'arm64-v8a'
         }
     }
 
@@ -49,6 +50,11 @@ android {
             path "src/main/cpp/CMakeLists.txt"
             //version "3.10.2"
         }
+    }
+
+    compileOptions {
+        targetCompatibility = 1.8
+        sourceCompatibility = 1.8
     }
 }
 
