--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,10 @@ android {
         }
 
         ndk {
-            //abiFilters 'armeabi-v7a', 'arm64-v8a'
-            // abiFilters 'armeabi-v7a'
-            abiFilters 'arm64-v8a'
+            //abiFilters 'armeabi-v7a'
+            //abiFilters 'arm64-v8a'
+
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
 
