--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -89,7 +89,7 @@ add_library(
         opensles/OpenAudio.h
         opensles/OpenAudio.cpp
         jni_AudioPlayer.cpp
-        jni_MainActivity.cpp
+        jni_demo.cpp
 )
 
 
