demo: use opensles play PCM audio data

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -88,8 +88,10 @@ add_library(
 
         opensles/OpenAudio.h
         opensles/OpenAudio.cpp
+        demo.h
         jni_AudioPlayer.cpp
         jni_demo.cpp
+        jni_PCM_demo.cpp
 )
 
 
