使用夏操俊老师原始代码可以播放，自行简单修改无法运行得到结果. 后续需要研究原因.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -93,6 +93,7 @@ add_library(
         jni_demo.cpp
         jni_PCM_demo.cpp
         jni_YUV_demo.cc
+        jni_YUV_demo_book.cc
 )
 
 
@@ -103,7 +104,7 @@ target_link_libraries(
         avcodec avfilter avformat avutil swresample swscale
 
         # android
-        log android OpenSLES EGL GLESv3
+        log android OpenSLES EGL GLESv2
 
         #
         nativehelper
