implement the IObserver

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -99,6 +99,7 @@ add_library(
         # code for xplayer
         xplayer/FFDemux.cc
         xplayer/IDemux.cc
+        xplayer/IObserver.cc
         xplayer/XData.cc
         xplayer/XLog.cc
         xplayer/XThread.cc
