back up some code

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -95,6 +95,7 @@ add_library(
         jni_PCM_demo.cpp
         jni_YUV_demo.cc
         jni_YUV_demo_book.cc
+        jni_XMediaPlayer.cc
 
         # code for xplayer
         xplayer/FFDemux.cc
